# NotifyPilot

./: .gitignore  LICENSE  README.md  README_EN.md  README_TW.md  notify_pilot.py  pyproject.toml  requirements.txt
tests/: test_notify_pilot.py
