[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notifypilot"
version = "1.0.0"
description = "🔔 NotifyPilot - Lightweight Terminal Intelligent Notification Management Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "NotifyPilot Team", email = "notifypilot@example.com"}
]
keywords = [
    "notification",
    "terminal",
    "cli",
    "tui",
    "scheduler",
    "priority",
    "management",
    "developer-tools",
    "productivity"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Desktop Environment",
    "Topic :: Software Development",
    "Typing :: Typed"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=6.0"
]

[project.scripts]
notifypilot = "notify_pilot:main"

[project.urls]
Homepage = "https://github.com/gitstq/NotifyPilot"
Documentation = "https://github.com/gitstq/NotifyPilot#readme"
Repository = "https://github.com/gitstq/NotifyPilot"
Issues = "https://github.com/gitstq/NotifyPilot/issues"

[tool.setuptools]
py-modules = ["notify_pilot"]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
